[1978475] Clear clipboard options are no longer interchanged.
[1970652] No longer crashes when user exits search for non-existant
database.
[1966718] Text in 'Notes" now has horizontal scroll bar during Add.
[1959193] PWS now honours the read-only command line parameter (-r)
for first open.  Then governed by R/O open preference or user selecting
read-only at open time.
[] Expired icon now correct after password change.

Changes to Existing Features in 3.14
====================================
[1958303] TreeView buttons (+/-) now larger without significantly
increasing the visible bitmap image.  Also, now transparent.
[] Drop down list of databases at start-up now retains order of usage
rather than sorted alphabetically.

New Features for 3.14
=====================
[2018365] Option to allow restricting only a single instance per user.
If set and another copy of PasswordSafe started, focus is given to the
existing instance.
[2004500] CTRL-A now selects all of the Notes field in Add & Edit.
[] The entries displayed can now be filtered based on rules on every
field in the database.

Bugs fixed in 3.13
==================
[1941360] Rename with F2 now enables Save button.
[1940311] Password Policy now ignores length requirements if not applicable.
[1938057] Non-Latin text now correctly exported to plain text file.
[1926678, 1937293,1939294] Reduce GDI object leaks that cause display problems
during hibernation, screen locking and remote access.
[1914433] It is now possible to view the password policy set for an
individual entry, by shift-clicking on the checked Override Policy
checkbox. A tooltip explaining this is shown when relevant.
[1904391] Many functions, e.g.,  cancelling a rename of an entry,
inter-instance Drag & Drop, no longer collapse the entire tree.
[1904254] Non-text fields (e.g., time) are not shown in Advanced
Search, as they are not searched.
[1900655] Compare advanced subset now applies to current and comparison
databases.